# rm-auto-aim-msbuild

./: .clang-format  .gitignore  compile_commands.json  meson.build  readme.md  run
.cache/clangd/index/: CameraParams.h.7525A6A59D21523E.idx  CameraParams.h.80F0218011D0C57B.idx  MvCameraControl.h.561245C406F8D67C.idx  MvCameraControl.h.94DE809D7D8688B1.idx  MvErrorDefine.h.36CB2AB4BD1718D6.idx  MvErrorDefine.h.F43B299F28F3E6A4.idx  MvISPErrorDefine.h.69334C141A674125.idx  MvISPErrorDefine.h.9C3CCB19042E6E98.idx  MvObsoleteInterfaces.h.1E10A9C83EC68EA9.idx  MvObsoleteInterfaces.h.C581C0708EF4BFCD.idx  ObsoleteCamParams.h.27B58518E577F92E.idx  ObsoleteCamParams.h.6A4189E823C6D90A.idx  PixelType.h.4B853449C35E046C.idx  PixelType.h.E90C1FE28E5A6528.idx  armor.cpp.097A94DD91034657.idx  armor.cpp.1B88C10E93B9A6C1.idx  array.hpp.31D15264FF90FDEA.idx  array.hpp.3467F1F403ED9F9B.idx  array.inl.B4C1B84C4A6AE6F1.idx  array.inl.C37CB183243B323C.idx  at_path.hpp.0A2B52365C8FE59E.idx  at_path.hpp.4FD6988536473494.idx  at_path.inl.56F8842F7BC7C2BB.idx  at_path.inl.602505E7D41EEC7B.idx  auto_aim.cpp.2EDCF6B6AE4AA809.idx  auto_aim.cpp.71E06FB9089D75BA.idx  cam_capture.cpp.07F61824D82AA3F0.idx  cam_capture.cpp.45D694BCDBC7C5A1.idx  cam_capture.hpp.D0A1913E2C80D0DA.idx  cam_capture.hpp.EA44EA9130A40F0D.idx  cbuffer_test.cpp.EA2C5B652F0DC8CF.idx  circular_buffer.hpp.4A7CAEF5B995D1BA.idx  circular_buffer.hpp.68D59398923C04B6.idx  circular_buffer_test.cpp.D2755A7554BA803B.idx  classifier.cpp.1F3F50035F2C42CC.idx  classifier.cpp.B371435D51ADAAEB.idx  classifier.hpp.305FBD5C06146E32.idx  classifier.hpp.D9A4563CB8ADC086.idx  config.hpp.26001850B1E2FA69.idx  config.hpp.3F8DBE0AF187CC40.idx  (+136 more)
app/: auto_aim.cpp  main.cpp  meson.build
cam_capture/: cam_capture.cpp  cam_capture.hpp  meson.build
camera/: camera.cpp  camera.hpp  meson.build
config/: cam.toml  camera.toml  classifier.toml  comm.toml  debug.toml  detection_tr.toml  detector.toml  game.toml  meson.build  port.toml  tracking.toml  transform.toml
debug/: debug_options.cpp  debug_options.hpp  meson.build
detector/: meson.build
detector/include/: annotator.hpp  armor.hpp  classifier.hpp  detector.hpp  id_classify.hpp  publisher.hpp
detector/src/: annotator.cpp  armor.cpp  armor_config.cpp  classifier.cpp  detector.cpp  lightbar.cpp  lightbar_config.cpp  publisher.cpp
firing/: firing.cpp  firing.hpp  meson.build
include/: comm.hpp  transform.hpp
output/config/: cam.toml  comm.toml  config.hpp  detection_tr.toml  tracking.toml  transform.toml
policy/: meson.build  policy.cpp  policy.hpp
port/: meson.build  port.cpp  port.hpp  simulator.py
serialport/: meson.build  serial_port.cpp  serial_port.hpp
simulator/: port_data_recv.py  port_data_sender.py
structs/: circular_buffer.hpp  config.hpp  low_pass_filter.hpp  meson.build  structs.hpp
subprojects/mvs/: meson.build
subprojects/tf3d/: meson.build
subprojects/tf3d/include/transforms3d/: nanoflann.hpp
test/: cbuffer_test.cpp  dataflow_cam2image_test.cpp  detector_test.cpp  gdebug.cpp  init_cam.cpp  meson.build  read_config.cpp  serial_port_test.cpp  test_cam2send.cpp  test_cam2tf.cpp  test_camera.cpp  test_classifier.cpp  test_lightbar_armor_config.cpp  test_port.cpp  test_portcam.cpp  tf_graph.cpp  wq_test.cpp
tf/: meson.build
tf/include/: pose_convert.hpp  transform.hpp
tf/src/: pose_convert.cpp  transform.cpp
thpool/: thpool.hpp
tracker/: meson.build  tracker.cpp  tracker.hpp
tracker/filters/: ekf.cpp  ekf.hpp  kf.hpp
tracker/include/: base_filter.hpp  base_model.hpp  kf.hpp
transform/: meson.build  pnp_solver.cpp  pnp_solver.hpp  transform.cpp  transform.hpp
transform/include/: pnp_solver.hpp  pose_convert.hpp  transform.hpp
transform/src/: pnp_solver.cpp  pose_convert.cpp  transform.cpp
work_queue/: meson.build  thpool.hpp  work_queue.hpp
